<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>dev.zawarudo</groupId>
    <artifactId>holobot</artifactId>
    <version>3.4.0</version>
    <name>HoloBot</name>
    <description>Java Discord Bot</description>
    <packaging>jar</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>21</java.version>
    </properties>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>dev.zawarudo.holo.core.Bootstrap</mainClass>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                        </manifest>
                        <manifestEntries>
                            <Implementation-Title>${project.name}</Implementation-Title>
                            <Implementation-Version>${project.version}</Implementation-Version>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>
                    <release>21</release>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.google.cloud.tools</groupId>
                <artifactId>jib-maven-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <from>
                        <image>eclipse-temurin:21-jre-alpine</image>
                    </from>
                    <to>
                        <!-- Push to GitHub Container Registry -->
                        <image>ghcr.io/zaw4rud0/holobot</image>
                        <tags>
                            <tag>${project.version}</tag>
                            <tag>latest</tag>
                        </tags>
                    </to>

                    <containerizingMode>packaged</containerizingMode>

                    <container>
                        <appRoot>/app</appRoot>
                        <workingDirectory>/app</workingDirectory>
                        <mainClass>dev.zawarudo.holo.core.Bootstrap</mainClass>

                        <jvmFlags>
                            <jvmFlag>-XX:+ExitOnOutOfMemoryError</jvmFlag>
                            <jvmFlag>-XX:MaxRAMPercentage=75.0</jvmFlag>
                        </jvmFlags>

                        <environment>
                            <TZ>Europe/Zurich</TZ>
                        </environment>

                        <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
                    </container>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <!-- Core of the bot -->
        <dependency>
            <groupId>net.dv8tion</groupId>
            <artifactId>JDA</artifactId>
            <version>6.2.0</version>
        </dependency>

        <!-- Maintained version of JDA Utilities -->
        <dependency>
            <groupId>pw.chew</groupId>
            <artifactId>jda-chewtils</artifactId>
            <version>2.0-SNAPSHOT</version>
            <scope>compile</scope>
            <type>pom</type>
        </dependency>

        <!-- Gson to work with Json data -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.13.2</version>
        </dependency>

        <!-- Dependency to work with .env files -->
        <dependency>
            <groupId>io.github.cdimascio</groupId>
            <artifactId>dotenv-java</artifactId>
            <version>v3.2.0</version>
        </dependency>

        <!-- Guava, provides a RateLimiter -->
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>33.5.0-jre</version>
        </dependency>

        <!-- Akinator API wrapper -->
        <dependency>
            <groupId>org.eu.zajc</groupId>
            <artifactId>akiwrapper</artifactId>
            <version>3.0.2</version>
        </dependency>

        <!-- LavaPlayer -->
        <!-- TODO: Borked, remove -->
        <dependency>
            <groupId>com.github.walkyst</groupId>
            <artifactId>lavaplayer-fork</artifactId>
            <version>1.4.3</version>
        </dependency>

        <!-- Jsoup HTML parser -->
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.21.2</version>
        </dependency>

        <!-- Java Database Connectivity -->
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.51.0.0</version>
        </dependency>

        <!-- JLyrics to browse lyrics and song information -->
        <dependency>
            <groupId>com.github.jagrosh</groupId>
            <artifactId>JLyrics</artifactId>
            <version>0f9ac5df83</version>
        </dependency>

        <!-- Dependency for GitHub API -->
        <dependency>
            <groupId>org.kohsuke</groupId>
            <artifactId>github-api</artifactId>
            <version>1.330</version>
        </dependency>

        <!-- Logging stuff -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.5.21</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>1.5.21</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.17</version>
        </dependency>

        <!-- Plugins that extend the number of formats supported by ImageIO -->
        <dependency>
            <groupId>com.twelvemonkeys.imageio</groupId>
            <artifactId>imageio-jpeg</artifactId>
            <version>3.12.0</version>
        </dependency>
        <dependency>
            <groupId>com.twelvemonkeys.imageio</groupId>
            <artifactId>imageio-tiff</artifactId>
            <version>3.12.0</version>
        </dependency>
        <dependency>
            <groupId>org.sejda.imageio</groupId>
            <artifactId>webp-imageio</artifactId>
            <version>0.1.6</version>
        </dependency>

        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>1.20.0</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.21.0</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>6.0.1</version>
            <scope>test</scope>
        </dependency>

        <!-- Used for validating url strings -->
        <dependency>
            <groupId>commons-validator</groupId>
            <artifactId>commons-validator</artifactId>
            <version>1.10.1</version>
        </dependency>

        <!-- Used to get dominant color and representative color palette of an image -->
        <dependency>
            <groupId>de.androidpit</groupId>
            <artifactId>color-thief</artifactId>
            <version>1.1.2</version>
        </dependency>
    </dependencies>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub zaw4rud0 Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/zaw4rud0/holobot</url>
        </repository>
    </distributionManagement>

    <repositories>
        <!-- Repo for JDA -->
        <repository>
            <id>dv8tion</id>
            <name>m2-dv8tion</name>
            <url>https://m2.dv8tion.net/releases</url>
        </repository>
        <!-- Repo for jda-chewtils -->
        <repository>
            <id>chew-m2-snapshots</id>
            <url>https://m2.chew.pro/snapshots/</url>
        </repository>
        <repository>
            <id>jitpack</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>jcenter</id>
            <name>jcenter-bintray</name>
            <url>https://jcenter.bintray.com</url>
        </repository>
        <repository>
            <id>github</id>
            <name>GitHub repository of my packages</name>
            <url>https://maven.pkg.github.com/zaw4rud0</url>
        </repository>
    </repositories>
</project>